# internal/server/api/swagger.json
@@ -329,6 +329,28 @@
                 "responses": {}
             }
         },
+        "/api/search": {
+            "get": {
+                "produces": [
+                    "application/json",
+                    "text/html"
+                ],
+                "tags": [
+                    "search"
+                ],
+                "summary": "Search files",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search query",
+                        "name": "q",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/testdata/clean": {
             "post": {
                 "description": "Removes all test data files and metadata",
