# internal/server/server.go
@@ -70,6 +70,7 @@ func StartServerChi() {
 	r.Get("/swagger/*", httpSwagger.Handler())
 	r.Route("/api", func(r chi.Router) {
 		r.Get("/health", handleAPIHealth)
+		r.Get("/search", handleAPISearch)
 		// ----------------------------------------------------------------------------------------
 		// ---------------------------------------- THEMES ----------------------------------------
 		// ----------------------------------------------------------------------------------------
